--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "bootstrap": "^5.1.3",
+    "ngx-pagination": "^5.1.1",
     "rxjs": "~7.4.0",
     "sweetalert2": "^11.4.14",
     "tslib": "^2.3.0",
